fix: replace Map.of/List.of/readAllBytes with Java 8 compatible syntax in tests